--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,14 @@ body {
 .cell:hover {
     background-color: #ddd;
 }
+
+.winner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 5rem;
+    width: 100%;
+    height: 100%;
+    background-color: #bbb;
+}
