--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: black;
     font-size: 5rem;
     width: 100%;
     height: 100%;
-    background-color: #bbb;
+    background-color: white;
 }
