--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,46 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f4f4f4;
+    background: url('background-pattern.png');
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+header #reset-button {
+    background-color: #ff4081;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    outline: none;
+}
+
+header #reset-button:hover {
+    background-color: #e91e63;
 }
 
 .current-player-container {
+    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 1.5rem;
 }
